# crane_x7_vla

./: .dockerignore  .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  renovate.json
.claude/: settings.json
docker/: Dockerfile.inference  Dockerfile.lerobot  Dockerfile.remote-inference  Dockerfile.remote-vla-rl  Dockerfile.ros2  Dockerfile.vla-rl  Dockerfile.vlarl  entrypoint-remote-inference.sh  entrypoint-remote-vla-rl.sh
docs/: DOCKER_USAGE.md  README.md  ROS2_DOCKER.md  VLA_DOCKER.md  lerobot.md  remote.md  ros2.md  sim.md  slurm.md  vla-rl.md  vla.md
lerobot/: .env.template  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
lerobot/calibration/: .gitkeep
lerobot/configs/: act_crane_x7.yaml  diffusion_crane_x7.yaml
lerobot/lerobot_robot_crane_x7/: __init__.py  config_crane_x7.py  crane_x7.py
lerobot/lerobot_teleoperator_crane_x7/: __init__.py  config_crane_x7_teleop.py  crane_x7_teleop.py
lerobot/scripts/: calibrate.py  convert_tfrecord_to_lerobot.py  find_motors.py  inference.py
ros2/: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  rosdep_packages.txt
ros2/docker/: .env.template  Dockerfile  Dockerfile.vla-inference  cyclonedds-local.xml  docker-compose.remote-vla.yml  docker-compose.yml  entrypoint-vla-inference.sh
ros2/docker-remote/: .env.template  Dockerfile  cyclonedds.xml  docker-compose.yml  entrypoint-rosbridge.sh  wait-for-peer.sh
ros2/scripts/: build.sh  generate_rosdep_packages.sh  launch.sh  launch_sim.sh  read_tfrecord.py  run.sh
ros2/src/crane_x7_bringup/: package.xml  setup.cfg  setup.py
ros2/src/crane_x7_bringup/launch/: data_collection.launch.py  gemini_real.launch.py  gemini_sim.launch.py  lift.launch.py  lift_logger.launch.py  lift_vla.launch.py  maniskill.launch.py  maniskill_logger.launch.py  maniskill_vla.launch.py  real.launch.py  rosbridge_real.launch.py  rosbridge_sim.launch.py  sim.launch.py  teleop.launch.py  vla_real.launch.py  vla_sim.launch.py
ros2/src/crane_x7_gemini/: README.md  package.xml  setup.cfg  setup.py
ros2/src/crane_x7_gemini/config/: gemini_config.yaml
ros2/src/crane_x7_gemini/crane_x7_gemini/: __init__.py  coordinate_transformer.py  gemini_node.py  object_detector.py  prompt_publisher.py  trajectory_planner.py
ros2/src/crane_x7_gemini/launch/: gemini.launch.py  gemini_pick_and_place_sim.launch.py  gemini_with_robot.launch.py  object_detector.launch.py  trajectory_planner.launch.py
ros2/src/crane_x7_lift/: package.xml  setup.cfg  setup.py
ros2/src/crane_x7_lift/config/: lift_config.yaml
ros2/src/crane_x7_lift/crane_x7_lift/: __init__.py  lift_sim_node.py
ros2/src/crane_x7_lift/launch/: sim.launch.py
ros2/src/crane_x7_log/: README.md  package.xml  setup.cfg  setup.py
ros2/src/crane_x7_log/config/: camera_viewer.rviz  logger_config.yaml
ros2/src/crane_x7_log/crane_x7_log/: __init__.py  config_manager.py  data_logger.py  episode_saver.py  image_processor.py  oxe_logger.py  oxe_writer.py  tfrecord_logger.py  tfrecord_writer.py  voice_notifier.py
ros2/src/crane_x7_log/launch/: camera_viewer.launch.py  data_logger.launch.py  demo_with_logger.launch.py  oxe_logger.launch.py  real.launch.py  real_with_logger.launch.py  real_with_logger_and_viewer.launch.py  sim.launch.py  teleop_leader.launch.py  teleop_leader_with_logger.launch.py  teleop_leader_with_logger_and_viewer.launch.py  tfrecord_logger.launch.py
ros2/src/crane_x7_sim_gazebo/: CMakeLists.txt  README.md  package.xml
ros2/src/crane_x7_sim_gazebo/launch/: pick_and_place.launch.py
ros2/src/crane_x7_sim_gazebo/urdf/: d435_ignition.xacro
ros2/src/crane_x7_sim_gazebo/worlds/: pick_and_place.sdf
ros2/src/crane_x7_sim_maniskill/: package.xml  setup.cfg  setup.py
ros2/src/crane_x7_sim_maniskill/config/: maniskill_config.yaml
ros2/src/crane_x7_sim_maniskill/crane_x7_sim_maniskill/: maniskill_sim_node.py
ros2/src/crane_x7_sim_maniskill/launch/: sim_only.launch.py  sim_with_logger.launch.py  sim_with_vla.launch.py
ros2/src/crane_x7_teleop/: CMakeLists.txt  package.xml
ros2/src/crane_x7_teleop/config/: teleop_config.yaml
ros2/src/crane_x7_teleop/include/crane_x7_teleop/: teleop_hardware_node.hpp
ros2/src/crane_x7_teleop/launch/: teleop_follower.launch.py  teleop_follower_with_viewer.launch.py  teleop_leader.launch.py  teleop_with_logger.launch.py
ros2/src/crane_x7_teleop/src/: teleop_hardware_main.cpp  teleop_hardware_node.cpp
ros2/src/crane_x7_vla/: README.md  package.xml  setup.cfg  setup.py
ros2/src/crane_x7_vla/config/: vla_config.yaml
ros2/src/crane_x7_vla/crane_x7_vla/: robot_controller.py  vla_inference_core.py  vla_inference_node.py
ros2/src/crane_x7_vla/launch/: real_with_vla.launch.py  remote_robot.launch.py  remote_sim.launch.py  rosbridge_robot.launch.py  rosbridge_sim.launch.py  sim_with_vla.launch.py  vla_control.launch.py  vla_inference_only.launch.py
ros2/src/crane_x7_vla/scripts/: vla_inference_rosbridge.py
scripts/: build.sh  run.sh
scripts/data/: show_episode.py  update_language_instruction.py
scripts/docker/: build-entrypoint.sh  entrypoint.sh  run-entrypoint.sh
sim/: .gitignore  README.md  requirements.txt  setup.py
sim/src/: __init__.py
slurm/: .env.template  .gitignore  README.md  pyproject.toml  submit.sh
slurm/example_jobs/: train_openpi.sh  train_openvla.sh
slurm/sweeps/: sweep_openpi.yaml  sweep_openvla.yaml
vla/: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.minivla  Dockerfile.openpi  Dockerfile.openpi-pytorch  Dockerfile.openvla  README.md  crane_x7_dataset.py  docker-compose.yml  finetune.py  requirements-base.txt  requirements-minivla.txt  requirements-openpi-pytorch.txt  requirements-openpi.txt  requirements-openvla.txt  requirements.txt
vla-rl/: requirements.txt  setup.py
vla-rl/configs/: crane_x7_ppo.yaml  default.yaml
vla/configs/: minivla_default.yaml  openpi_default.yaml  openvla_default.yaml
vla/examples/: train_openvla.py  (+1 more)
vlarl/: Dockerfile.vlarl.example  README.md  requirements.txt  setup.py
(+173 files in other folders)
