# SPDX-FileCopyrightText: 2025 nop
# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crane-x7-lerobot"
version = "0.1.0"
description = "LeRobot integration for CRANE-X7 robot arm"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "nop" }
]
keywords = ["robotics", "lerobot", "crane-x7", "dynamixel", "imitation-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "lerobot[dynamixel,realsense]>=0.1.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pyrealsense2>=2.54.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["lerobot_robot_crane_x7", "lerobot_teleoperator_crane_x7"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
