<?xml version="1.0"?>
<!-- SPDX-License-Identifier: MIT -->
<!-- SPDX-FileCopyrightText: 2025 nop -->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crane_x7_gemini</name>
  <version>0.0.0</version>
  <description>Google Gemini Robotics-ER API integration for CRANE-X7</description>
  <maintainer email="noplab90@gmail.com">nop</maintainer>
  <author email="noplab90@gmail.com">nop</author>
  <license>MIT</license>
  <url type="repository">https://github.com/NOPLAB/CRANE-X7</url>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
