<?xml version="1.0"?>
<!-- SPDX-License-Identifier: MIT -->
<!-- SPDX-FileCopyrightText: 2025 nop -->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crane_x7_vla</name>
  <version>0.0.0</version>
  <description>VLA-based control package for CRANE-X7 robotic arm using OpenVLA fine-tuned models</description>
  <maintainer email="noplab90@gmail.com">nop</maintainer>
  <author email="noplab90@gmail.com">nop</author>
  <license>MIT</license>
  <url type="repository">https://github.com/NOPLAB/CRANE-X7</url>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>example_interfaces</depend>
  <depend>std_srvs</depend>

  <exec_depend>crane_x7_examples</exec_depend>
  <exec_depend>crane_x7_sim_gazebo</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
